# poop_master

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  Makefile  Miner.cpp  Miner.h  README.md  cl_helper.h  cmake_install.cmake  main.cpp  sha256_cl.h  utils.h
IXWebSocket/build_x86/: CMakeCache.txt  cmake_install.cmake  install_manifest.txt
kernels/: sha256.cl
